--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
         <div class="hero-content">
             <h1>We're Your Oasis Of Relaxation</h1>
             <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa" target="_blank" rel="noopener"
-                class="button">7203 GERMANTOWN AVE BOOK NOW</a>
+                class="button">7203 G-TOWN AVE BOOK NOW</a>
             <a href="https://www.massagebook.com/therapists/SacredParadiseSpa/gift-certificates" target="_blank"
                 rel="noopener" class="button">PH GIFT CERTIFICATES</a>
             <a href="https://www.massagebook.com/sacred-paradise-spa-healthandwellness?src=external" target="_blank" rel="noopener"
-                class="button">7224 GERMANTOWN AVE BOOK NOW</a>
+                class="button">7224 G-TOWN AVE BOOK NOW</a>
         </div>
     </section>
 
@@ -484,11 +484,11 @@
         <div class="row center wow fadeInUp">
             <h1>Book Online Today</h1>
             <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa" target="_blank" rel="noopener"
-                class="button">7203 GERMANTOWN AVE BOOK NOW</a>
+                class="button">7203 G-TOWN AVE BOOK NOW</a>
             <a href="https://www.massagebook.com/therapists/SacredParadiseSpa/gift-certificates" target="_blank"
                 rel="noopener" class="button">PH GIFT CERTIFICATES</a>
             <a href="https://www.massagebook.com/sacred-paradise-spa-healthandwellness?src=external" target="_blank" rel="noopener"
-                class="button">7224 GERMANTOWN AVE BOOK NOW</a>
+                class="button">7224 G-TOWN AVE BOOK NOW</a>
         </div>
 
     </section>
