--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa" target="_blank" rel="noopener"
                 class="button">7203 G-TOWN AVE BOOK NOW</a>
             <a href="https://www.massagebook.com/therapists/SacredParadiseSpa/gift-certificates" target="_blank"
-                rel="noopener" class="button">PH GIFT CERTIFICATES</a>
+                rel="noopener" class="button">GIFT CERTIFICATES</a>
             <a href="https://www.massagebook.com/sacred-paradise-spa-healthandwellness?src=external" target="_blank" rel="noopener"
                 class="button">7224 G-TOWN AVE BOOK NOW</a>
         </div>
@@ -207,8 +207,6 @@
                         <div class="col">
                             <h4>Customized Bodywork</h4>
                             <p>Improves circulation, ease muscle tension and promote relaxation.</p>
-                            <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa#services/bodywork"
-                                target="_blank" rel="noopener" class="button small">Select</a>
                         </div>
                     </div>
                 </div>
@@ -220,8 +218,6 @@
                         <div class="col">
                             <h4>Skincare</h4>
                             <p>Restore the glow in your skin with a cleanse, exfoliation and moisturizing.</p>
-                            <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa#services/skincare"
-                                target="_blank" rel="noopener" class="button small">Select</a>
                         </div>
                     </div>
                 </div>
@@ -237,8 +233,6 @@
                             <p>Transfer of energy or 'qi' through the application pressure on distinct areas of the
                                 hands and feet linked to different areas of the body to reduce pain and promote overall
                                 wellness.</p>
-                            <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa#services/reflexology"
-                                target="_blank" rel="noopener" class="button small">Select</a>
                         </div>
                     </div>
                 </div>
@@ -251,8 +245,6 @@
                             <h4>Stretch Therapy</h4>
                             <p>Great for fitness-lovers and those constantly on the go, releases stiffness in primary
                                 muscle groups.</p>
-                            <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa#services/fitness"
-                                target="_blank" rel="noopener" class="button small">Select</a>
                         </div>
                     </div>
                 </div>
@@ -266,8 +258,6 @@
                         <div class="col">
                             <h4>Body Contouring</h4>
                             <p>Improves blood flow, detoxifies, and reduce inches.</p>
-                            <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa#services/wellness"
-                                target="_blank" rel="noopener" class="button small">Select</a>
                         </div>
                     </div>
                 </div>
@@ -279,8 +269,6 @@
                         <div class="col">
                             <h4>Acupuncture</h4>
                             <p>Effective tools for reducing stress, insomnia and pain.</p>
-                            <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa#services/acupuncture"
-                                target="_blank" rel="noopener" class="button small">Select</a>
                         </div>
                     </div>
                 </div>
@@ -294,8 +282,6 @@
                         <div class="col">
                             <h4>Cupping</h4>
                             <p>Cupping aids in localized pain reduction and muscle relaxation.</p>
-                            <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa#services/acupuncture"
-                                target="_blank" rel="noopener" class="button small">Select</a>
                         </div>
                     </div>
                 </div>
@@ -307,8 +293,6 @@
                         <div class="col">
                             <h4>Customer Well Satisfied</h4>
                             <p>Great service and the staff are courteous and knowledgeable.</p>
-                            <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa#services"
-                                target="_blank" rel="noopener" class="button small">Select</a>
                         </div>
                     </div>
                 </div>
@@ -486,7 +470,7 @@
             <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa" target="_blank" rel="noopener"
                 class="button">7203 G-TOWN AVE BOOK NOW</a>
             <a href="https://www.massagebook.com/therapists/SacredParadiseSpa/gift-certificates" target="_blank"
-                rel="noopener" class="button">PH GIFT CERTIFICATES</a>
+                rel="noopener" class="button">GIFT CERTIFICATES</a>
             <a href="https://www.massagebook.com/sacred-paradise-spa-healthandwellness?src=external" target="_blank" rel="noopener"
                 class="button">7224 G-TOWN AVE BOOK NOW</a>
         </div>
