--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 
                     #mc_embed_signup .button {
                         color: #fff;
-                        font-family: Montserrat, sans-serif;
+                        font-family: Lato, sans-serif;
                         font-size: 18px;
                         font-weight: 700;
                         line-height: 36px;
