--- a/index.html
+++ b/index.html
@@ -264,10 +264,10 @@
                 <div class="col wow fadeInRight">
                     <div class="flex-grid">
                         <div class="col">
-                            <img src="images/acupuncture.jpg" atl="acupunture" width="100%" height="240">
+                            <img src="images/chair-massage.jpg" atl="chair massage" width="100%" height="240">
                         </div>
                         <div class="col">
-                            <h4>Acupuncture</h4>
+                            <h4>Chair Massage</h4>
                             <p>Effective tools for reducing stress, insomnia and pain.</p>
                         </div>
                     </div>
