--- a/index.html
+++ b/index.html
@@ -157,6 +157,10 @@
                 <div class="team6"></div>
                 <h2 class="center align-bottom">Anabel Yamilet</h2>
             </div>
+            <div class="col wow fadeInUp">
+                <div class="team7"></div>
+                <h2 class="center align-bottom">Juana Henriquez</h2>
+            </div>
         </div>
     </section>
 
