--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                         </div>
                         <div class="col">
                             <h4>Chair Massage</h4>
-                            <p>Effective tools for reducing stress, insomnia and pain.</p>
+                            <p>10 to 20 minute seated massage that focuses on the upper body, including the back, shoulders, neck, arms, and hands.</p>
                         </div>
                     </div>
                 </div>
