--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
         <div class="hero-content">
             <h1>We're Your Oasis Of Relaxation</h1>
             <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa" target="_blank" rel="noopener"
-                class="button">7203 G-TOWN AVE BOOK NOW</a>
+                class="button">Book Now 7203 G-Town</a>
             <a href="https://www.massagebook.com/therapists/SacredParadiseSpa/gift-certificates" target="_blank"
                 rel="noopener" class="button">GIFT CERTIFICATES</a>
             <a href="https://www.massagebook.com/sacred-paradise-spa-healthandwellness?src=external" target="_blank" rel="noopener"
-                class="button">7224 G-TOWN AVE BOOK NOW</a>
+                class="button">Book Now 7224 G-Town</a>
         </div>
     </section>
 
@@ -117,8 +117,7 @@
         <div class="container">
             <div class="row">
                 <img class="center wow bounceIn " src="images/lotus-outline.png" width="80px" height="80px" alt="">
-                <h2 class="center wow fadeInUp">Sacred Paradise Spa Inc is here to provide and offer a more Healthy
-                    Lifestyle through Alternative Therapies, Massage, Nutrition, Weight Loss and Wellness.</h2>
+                <h2 class="center wow fadeInUp">Sacred Paradise Spa Inc – Philadelphia’s top-rated wellness center offering customized massage therapy, healing, weight loss solutions and holistic wellness. Experience the best in therapeutic massage, body contouring, cupping, reflexology, stretch therapy, and skin care.</h2>
             </div>
         </div>
     </section>
@@ -132,34 +131,47 @@
     <section id="team" class="team">
         <div class="flex-grid">
             <div class="col wow fadeInLeft">
-                <div class="team1"></div>
+                <div class="team-photo team1"></div>
                 <h2 class="center align-bottom">Carolina R.</h2>
             </div>
             <div class="col wow fadeInDown">
-                <div class="team2"></div>
+                <div class="team-photo team2"></div>
                 <h2 class="center align-bottom">Abrina Idun</h2>
             </div>
             <div class="col wow fadeInRight">
-                <div class="team3"></div>
+                <div class="team-photo team3"></div>
                 <h2 class="center align-bottom">Victoria Santiago</h2>
             </div>
         </div>
         <div class="flex-grid">
             <div class="col wow fadeInRight">
-                <div class="team4"></div>
+                <div class="team-photo team4"></div>
                 <h2 class="center align-bottom">Maria S.</h2>
             </div>
-            <div class="col wow fadeInUp">
-                <div class="team5"></div>
+            <div class="col wow fadeIn">
+                <div class="team-photo team5"></div>
                 <h2 class="center align-bottom">Kaheem Evans</h2>
             </div>
-            <div class="col wow fadeInUp">
-                <div class="team7"></div>
+            <div class="col wow fadeInLeft">
+                <div class="team-photo team7"></div>
                 <h2 class="center align-bottom">Juana Henriquez</h2>
             </div>
         </div>
+        <div class="flex-grid">
+            <div class="col wow fadeInLeft">
+                <div class="team-photo team8"></div>
+                <h2 class="center align-bottom">Flor Richiez</h2>
+            </div>
+            <div class="col wow fadeInUp">
+                <div class="team-photo team9"></div>
+                <h2 class="center align-bottom">Michael Malachi, CCMA</h2>
+            </div>
+            <div class="col wow fadeInRight">
+                <div class="team-photo team10"></div>
+                <h2 class="center align-bottom">Yvette Stevenson, MSN, RN</h2>
+            </div>
+        </div>
     </section>
-
 
     <!-- SECTION CONTACT  -->
     <section id="contact" class="contact">
@@ -293,6 +305,29 @@
                         <div class="col">
                             <h4>Customer Well Satisfied</h4>
                             <p>Great service and the staff are courteous and knowledgeable.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="flex-grid">
+                <div class="col wow fadeInLeft">
+                    <div class="flex-grid">
+                        <div class="col">
+                            <img src="images/mesotherapy.jpg" atl="cupping" width="100%" height="240">
+                        </div>
+                        <div class="col">
+                            <h4> IV Hydration, IM and Mesotherapy</h4>
+                            <p>Administered by:</p>
+                            <p>IV Hydration & IM Treatment: MSN, RN</p>
+                            <p>Mesotherapy by: CCMA</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col wow fadeInRight">
+                    <div class="flex-grid">
+                        <div class="col">
+                        </div>
+                        <div class="col">
                         </div>
                     </div>
                 </div>
@@ -468,11 +503,11 @@
         <div class="row center wow fadeInUp">
             <h1>Book Online Today</h1>
             <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa" target="_blank" rel="noopener"
-                class="button">7203 G-TOWN AVE BOOK NOW</a>
+                class="button">Book Now 7203 G-Town</a>
             <a href="https://www.massagebook.com/therapists/SacredParadiseSpa/gift-certificates" target="_blank"
                 rel="noopener" class="button">GIFT CERTIFICATES</a>
             <a href="https://www.massagebook.com/sacred-paradise-spa-healthandwellness?src=external" target="_blank" rel="noopener"
-                class="button">7224 G-TOWN AVE BOOK NOW</a>
+                class="button">Book Now 7224 G-Town</a>
         </div>
 
     </section>
