--- a/index.html
+++ b/index.html
@@ -148,13 +148,9 @@
                 <div class="team-photo team4"></div>
                 <h2 class="center align-bottom">Maria S.</h2>
             </div>
-            <div class="col wow fadeIn">
+            <div class="col wow fadeInLeft">
                 <div class="team-photo team5"></div>
                 <h2 class="center align-bottom">Kaheem Evans</h2>
-            </div>
-            <div class="col wow fadeInLeft">
-                <div class="team-photo team6"></div>
-                <h2 class="center align-bottom">Juana Henriquez</h2>
             </div>
         </div>
         <div class="flex-grid">
@@ -168,7 +164,7 @@
             </div>
             <div class="col wow fadeInRight">
                 <div class="team-photo team9"></div>
-                <h2 class="center align-bottom">Yvette Stevenson, MSN, RN</h2>
+                <h2 class="center align-bottom">Yvette Stevenson, MSN, APRN, FNP-C</h2>
             </div>
         </div>
     </section>
