--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <li class="main-nav-item"><a href="#ethics">ETHICS</a></li>
                         <li class="main-nav-item"><a href="#wellness">WELLNESS TEAM</a></li>
                         <li class="main-nav-item"><a href="#services-menu">MENU OF SERVICES</a></li>
-                        <li class="main-nav-item"><a href="#intake-form">Intake Form</a></li>
+                        <li class="main-nav-item"><a href="#waitlist">Intake Form</a></li>
                         <li class="main-nav-item"><a href="#map">LOCATION</a></li>
                         <li class="main-nav-item"><a href="#contact">CONTACT</a></li>
                     </ul>
@@ -89,7 +89,7 @@
                         <li class="slideout-nav-item"><a href="#ethics">ETHICS</a></li>
                         <li class="slideout-nav-item"><a href="#wellness">WELLNESS TEAM</a></li>
                         <li class="slideout-nav-item"><a href="#services-menu">MENU OF SERVICES</a></li>
-                        <li class="slideout-nav-item"><a href="#intake-form">Intake Form</a></li>
+                        <li class="slideout-nav-item"><a href="#waitlist">Wait List</a></li>
                         <li class="slideout-nav-item"><a href="#map">LOCATION</a></li>
                         <li class="slideout-nav-item"><a href="#contact">CONTACT</a></li>
                     </ul>
@@ -330,7 +330,7 @@
             </div>
     </section>
     <!-- SECTION SERVICES MENU -->
-    <section id="intake-form" class="intake-form">
+    <section id="waitlist" class="waitlist">
         <div class="container">
             <img class="center" src="images/lotus-outline.png" width="80px" height="80px" alt="lotus flower">
             <h2 class="center wow bounceIn">Client Intake Form</h2>
