--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <li class="main-nav-item"><a href="#ethics">ETHICS</a></li>
                         <li class="main-nav-item"><a href="#wellness">WELLNESS TEAM</a></li>
                         <li class="main-nav-item"><a href="#services-menu">MENU OF SERVICES</a></li>
-                        <li class="main-nav-item"><a href="#waitlist">Intake Form</a></li>
+                        <li class="main-nav-item"><a href="#waitlist">WAITLIST</a></li>
                         <li class="main-nav-item"><a href="#map">LOCATION</a></li>
                         <li class="main-nav-item"><a href="#contact">CONTACT</a></li>
                     </ul>
@@ -89,7 +89,7 @@
                         <li class="slideout-nav-item"><a href="#ethics">ETHICS</a></li>
                         <li class="slideout-nav-item"><a href="#wellness">WELLNESS TEAM</a></li>
                         <li class="slideout-nav-item"><a href="#services-menu">MENU OF SERVICES</a></li>
-                        <li class="slideout-nav-item"><a href="#waitlist">Wait List</a></li>
+                        <li class="slideout-nav-item"><a href="#waitlist">WAITLIST</a></li>
                         <li class="slideout-nav-item"><a href="#map">LOCATION</a></li>
                         <li class="slideout-nav-item"><a href="#contact">CONTACT</a></li>
                     </ul>
@@ -116,7 +116,7 @@
     <section id="mission" class="mission">
         <div class="container">
             <div class="row">
-                <img class="center wow bounceIn " src="images/lotus-outline.png" width="80px" height="80px" alt="">
+                <img class="center wow bounceIn" src="images/lotus-outline.png" width="80px" height="80px" alt="">
                 <h2 class="center wow fadeInUp">Sacred Paradise Spa Inc – Philadelphia’s top-rated wellness center offering customized massage therapy, healing, weight loss solutions and holistic wellness. Experience the best in therapeutic massage, body contouring, cupping, reflexology, stretch therapy, and skin care.</h2>
             </div>
         </div>
@@ -130,41 +130,65 @@
     <!-- SECTION TEAM  -->
     <section id="team" class="team">
         <div class="flex-grid">
-            <div class="col wow fadeInLeft">
+            <div class="col">
                 <div class="team-photo team1"></div>
-                <h2 class="center align-bottom">Carolina R.</h2>
+                <div class="team-content">
+                    <h2>Carolina Ruiz</h2>
+                    <h3>Medical Assistant for Physician, Medical Aesthetician, Medical Massage Therapist, Stretch Therapist, Body Sculpture Technician</h3>
+                </div>
             </div>
-            <div class="col wow fadeInDown">
+            <div class="col">
                 <div class="team-photo team2"></div>
-                <h2 class="center align-bottom">Abrina Idun</h2>
+                <div class="team-content">
+                    <h2>Abrina Idun</h2>
+                    <h3>Master Esthecian, Reflexologist</h3>
+                </div>
             </div>
-            <div class="col wow fadeInRight">
+            <div class="col">
                 <div class="team-photo team3"></div>
-                <h2 class="center align-bottom">Victoria Santiago</h2>
+                <div class="team-content">
+                    <h2>Victoria Santiago</h2>
+                    <h3>MT, CCMA, CST, Reflexologist</h3>
+                </div>
             </div>
         </div>
         <div class="flex-grid">
-            <div class="col wow fadeInRight">
+            <div class="col">
                 <div class="team-photo team4"></div>
-                <h2 class="center align-bottom">Maria S.</h2>
+                <div class="team-content">
+                    <h2>Maria S.</h2>
+                    <h3>Esthecian, MT</h3>
+                </div>
             </div>
-            <div class="col wow fadeInLeft">
+            <div class="col">
                 <div class="team-photo team5"></div>
-                <h2 class="center align-bottom">Kaheem Evans</h2>
+                <div class="team-content">
+                    <h2>Kaheem Evans</h2>
+                    <h3>MT, CST</h3>
+                </div>
             </div>
         </div>
         <div class="flex-grid">
-            <div class="col wow fadeInLeft">
+            <div class="col">
                 <div class="team-photo team7"></div>
-                <h2 class="center align-bottom">Flor Richiez</h2>
+                <div class="team-content">
+                    <h2>Flor Richiez</h2>
+                    <h3>Esthetician, MT</h3>
+                </div>
             </div>
-            <div class="col wow fadeInUp">
+            <div class="col">
                 <div class="team-photo team8"></div>
-                <h2 class="center align-bottom">Michael Malachi, CCMA</h2>
+                <div class="team-content">
+                    <h2>Michael Malachi, CCMA</h2>
+                    <h3>Massage Therapist, Medical Assistant for Physician, Stretch Therapist, Body Sculpture Technician</h3>
+                </div>    
             </div>
-            <div class="col wow fadeInRight">
+            <div class="col">
                 <div class="team-photo team9"></div>
-                <h2 class="center align-bottom">Yvette Stevenson, MSN, APRN, FNP-C</h2>
+                <div class="team-content">
+                    <h2>Yvette Stevenson</h2>
+                    <h3>MSN, APRN, FNP-C</h3>
+                </div>
             </div>
         </div>
     </section>
@@ -313,9 +337,8 @@
                         </div>
                         <div class="col">
                             <h4> IV Hydration, IM and Mesotherapy</h4>
-                            <p>Administered by:</p>
-                            <p>IV Hydration & IM Treatment: MSN, RN</p>
-                            <p>Mesotherapy by: CCMA</p>
+                            <p>Administered by: IV hydration, IV Push, IM TX: MSN, APRN, FNP-C</p>
+                            <p>Mesotherapy, PRP Tx, Micro needling and IM vitamin therapy by: CCMA for Physician</p>
                         </div>
                     </div>
                 </div>
@@ -333,7 +356,7 @@
     <section id="waitlist" class="waitlist">
         <div class="container">
             <img class="center" src="images/lotus-outline.png" width="80px" height="80px" alt="lotus flower">
-            <h2 class="center wow bounceIn">Client Intake Form</h2>
+            <h2 class="center wow bounceIn">Waitlist Form</h2>
             <div class="row">
                 <!-- Begin Mailchimp Signup Form -->
                 <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
