--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
     <script type="text/javascript" src="js/deznx.js"></script>
     <script type="text/javascript" src="js/wow.min.js"></script>
     <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
+<!-- js -->
+    <script type="text/javascript" src="js/jquery-3.7.1.min.js"></script>
+    <script type="text/javascript" src="js/deznx.js"></script>
+    <script type="text/javascript" src="js/wow.min.js"></script>
+    <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
+<!-- js -->
+    <script type="text/javascript" src="js/jquery-3.7.1.min.js"></script>
+    <script type="text/javascript" src="js/deznx.js"></script>
+    <script type="text/javascript" src="js/wow.min.js"></script>
+    <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
 
     <!-- Favicon-->
     <link rel="icon" type="image/png" href="images/favicon.png">
@@ -671,6 +681,11 @@
                             data-icon="dashicons:arrow-up-alt2"></span></a></div>
             </div>
         </section>
+
+        <script type="text/javascript" src="js/jquery-3.7.1.min.js"></script>
+        <script type="text/javascript" src="js/deznx.js"></script>
+        <script type="text/javascript" src="js/wow.min.js"></script>
+        <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
         <script>
             wow = new WOW(
                 {
@@ -683,6 +698,8 @@
             )
             wow.init();
         </script>
+        
+
 </body>
 
 </html>
