--- a/index.html
+++ b/index.html
@@ -27,22 +27,6 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/animate.min.css">
 
-    <!-- js -->
-    <script type="text/javascript" src="js/jquery-3.7.1.min.js"></script>
-    <script type="text/javascript" src="js/deznx.js"></script>
-    <script type="text/javascript" src="js/wow.min.js"></script>
-    <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
-<!-- js -->
-    <script type="text/javascript" src="js/jquery-3.7.1.min.js"></script>
-    <script type="text/javascript" src="js/deznx.js"></script>
-    <script type="text/javascript" src="js/wow.min.js"></script>
-    <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
-<!-- js -->
-    <script type="text/javascript" src="js/jquery-3.7.1.min.js"></script>
-    <script type="text/javascript" src="js/deznx.js"></script>
-    <script type="text/javascript" src="js/wow.min.js"></script>
-    <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
-
     <!-- Favicon-->
     <link rel="icon" type="image/png" href="images/favicon.png">
 
@@ -144,7 +128,7 @@
                 <div class="team-photo team1"></div>
                 <div class="team-content">
                     <h2>Carolina Ruiz</h2>
-                    <h3>Medical Assistant for Physician, Medical Aesthetician, Medical Massage Therapist, Stretch Therapist, Body Sculpture Technician</h3>
+                    <h3>Medical Assistant for Physician, Medical Aesthetician, Medical Massage Therapist, Stretch Therapist, Body Sculpt Tech</h3>
                 </div>
             </div>
             <div class="col">
@@ -158,7 +142,7 @@
                 <div class="team-photo team3"></div>
                 <div class="team-content">
                     <h2>Victoria Santiago</h2>
-                    <h3>MT, CCMA, CST, Reflexologist</h3>
+                    <h3>MT, CCMA, CST, Reflexologist, Body Sculpt Tech</h3>
                 </div>
             </div>
         </div>
@@ -174,7 +158,7 @@
                 <div class="team-photo team5"></div>
                 <div class="team-content">
                     <h2>Kaheem Evans</h2>
-                    <h3>MT, CST</h3>
+                    <h3>MT, CST, Body Sculpt Tech</h3>
                 </div>
             </div>
         </div>
@@ -189,15 +173,15 @@
             <div class="col">
                 <div class="team-photo team8"></div>
                 <div class="team-content">
-                    <h2>Michael Malachi, CCMA</h2>
-                    <h3>Massage Therapist, Medical Assistant for Physician, Stretch Therapist, Body Sculpture Technician</h3>
+                    <h2>Michael M., CCMA</h2>
+                    <h3>Massage Therapist, Medical Assistant for Physician, Stretch Therapist, Body Sculpt Tech</h3>
                 </div>    
             </div>
             <div class="col">
                 <div class="team-photo team9"></div>
                 <div class="team-content">
                     <h2>Yvette Stevenson</h2>
-                    <h3>MSN, APRN, FNP-C</h3>
+                    <h3>MSN, APRN, FNP-C, Medical Director</h3>
                 </div>
             </div>
         </div>
@@ -209,12 +193,12 @@
             <h1 class="center">We Have Various Payment Options for Our Clients</h1>
             <div class="flex-grid-thirds">
                 <div class="col wow fadeIn">
-                    <h3>With our facility being an essential business, our loyal customers payment options their for
-                        fitness & alternative therapies.</h3>
+                    <h2>With our facility being an essential business, our loyal customers payment options their for
+                        fitness & alternative therapies.</h2>
                 </div>
                 <div class="col wow fadeIn">
                     <h3>
-                        <strong>Sacred Paradise Spa</strong>
+                        Sacred Paradise Spa
                         <ul>
                             <li>NPI 1285997809</li>
                             <li>Taxonomy Code 225700000X</li>
@@ -224,7 +208,7 @@
                 </div>
                 <div class="col wow fadeIn">
                     <h3>
-                        <strong>We are Currently Accepting</strong>
+                        We are Currently Accepting
                         <ul>
                             <li>Health Savings Account</li>
                             <li>Flex Spending Account</li>
@@ -677,15 +661,15 @@
                     <script type="text/javascript">document.write(new Date().getFullYear());</script> Sacred Paradise
                     Spa | Built by designismylife
                 </p>
-                <div class="scrollToTop"><a href="#top" role="button" aria-hidden="true"><span class="iconify"
-                            data-icon="dashicons:arrow-up-alt2"></span></a></div>
+                <div class="scrollToTop">
+                    <a href="#top" role="button">╱╲</a>
+                </div>
             </div>
         </section>
-
-        <script type="text/javascript" src="js/jquery-3.7.1.min.js"></script>
+        
         <script type="text/javascript" src="js/deznx.js"></script>
         <script type="text/javascript" src="js/wow.min.js"></script>
-        <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
         <script>
             wow = new WOW(
                 {
@@ -698,8 +682,5 @@
             )
             wow.init();
         </script>
-        
-
-</body>
-
-</html>
+      </body>
+    </html>
