--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <div class="team-photo team8"></div>
                 <div class="team-content">
                     <h2>Michael M., CCMA</h2>
-                    <h3>Massage Therapist, Medical Assistant for Physician, Stretch Therapist, Body Sculpt Tech</h3>
+                    <h3>CCMA,Massage Therapist, Medical Assistant for Physician, Stretch Therapist, Body Sculpt Tech</h3>
                 </div>    
             </div>
             <div class="col">
@@ -187,8 +187,8 @@
         </div>
     </section>
 
-    <!-- SECTION CONTACT  -->
-    <section id="contact" class="contact">
+    <!-- SECTION OPTIONS  -->
+    <section id="options" class="options">
         <div class="container">
             <h1 class="center">We Have Various Payment Options for Our Clients</h1>
             <div class="flex-grid-thirds">
@@ -661,11 +661,12 @@
                     <script type="text/javascript">document.write(new Date().getFullYear());</script> Sacred Paradise
                     Spa | Built by designismylife
                 </p>
-                <div class="scrollToTop">
-                    <a href="#top" role="button">╱╲</a>
-                </div>
-            </div>
+            </div
+
         </section>
+        <div class="scrollToTop">
+            <a href="#top" role="button">SCROLL TO TOP</a>
+        </div>
         
         <script type="text/javascript" src="js/deznx.js"></script>
         <script type="text/javascript" src="js/wow.min.js"></script>
