--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </div>
             </div>
             <div class="row">
-                <nav id="navbar" class="navbar" style="display: none;">
+                <nav id="navbar" class="navbar">
                     <ul class="slideout-nav" role="navigation">
                         <li class="slideout-nav-item"><a href="index.html">HOME</a></li>
                         <li class="slideout-nav-item"><a href="#about">ABOUT</a></li>
@@ -110,7 +110,7 @@
     <section id="mission" class="mission">
         <div class="container">
             <div class="row">
-                <img class="center wow bounceIn" src="images/lotus-outline.png" width="80px" height="80px" alt="">
+                <img class="center wow fadeInUp" src="images/lotus-outline.png" width="80px" height="80px" alt="">
                 <h2 class="center wow fadeInUp">Sacred Paradise Spa Inc – Philadelphia’s top-rated wellness center offering customized massage therapy, healing, weight loss solutions and holistic wellness. Experience the best in therapeutic massage, body contouring, cupping, reflexology, stretch therapy, and skin care.</h2>
             </div>
         </div>
@@ -173,7 +173,7 @@
             <div class="col">
                 <div class="team-photo team8"></div>
                 <div class="team-content">
-                    <h2>Michael M., CCMA</h2>
+                    <h2>Michael M.</h2>
                     <h3>CCMA,Massage Therapist, Medical Assistant for Physician, Stretch Therapist, Body Sculpt Tech</h3>
                 </div>    
             </div>
@@ -223,9 +223,9 @@
     <section id="services-menu" class="services-menu">
         <div class="container">
             <img class="center" src="images/lotus-outline.png" width="80px" height="80px" alt="">
-            <h2 class="center wow bounceIn">MENU OF SERVICES</h2>
+            <h2 class="center wow fadeInUp">MENU OF SERVICES</h2>
             <div class="flex-grid">
-                <div class="col wow fadeInLeft">
+                <div class="col wow fadeInUp">
                     <div class="flex-grid">
                         <div class="col">
                             <img src="images/bodywork.jpg" atl="bodywork" width="100%" height="240">
@@ -236,7 +236,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col wow fadeInRight">
+                <div class="col wow fadeInUp">
                     <div class="flex-grid">
                         <div class="col">
                             <img src="images/skincare.jpg" atl="skincare" width="100%" height="240">
@@ -249,7 +249,7 @@
                 </div>
             </div>
             <div class="flex-grid">
-                <div class="col wow fadeInLeft">
+                <div class="col wow fadeInUp">
                     <div class="flex-grid">
                         <div class="col">
                             <img src="images/reflexology.jpg" atl="reflexology" width="100%" height="240">
@@ -262,7 +262,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col wow fadeInRight">
+                <div class="col wow fadeInUp">
                     <div class="flex-grid">
                         <div class="col">
                             <img src="images/fitness.jpg" atl="fitness" width="100%" height="240">
@@ -276,7 +276,7 @@
                 </div>
             </div>
             <div class="flex-grid">
-                <div class="col wow fadeInLeft">
+                <div class="col wow fadeInUp">
                     <div class="flex-grid">
                         <div class="col">
                             <img src="images/wellness.jpg" atl="wellness" width="100%" height="240">
@@ -287,7 +287,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col wow fadeInRight">
+                <div class="col wow fadeInUp">
                     <div class="flex-grid">
                         <div class="col">
                             <img src="images/chair-massage.jpg" atl="chair massage" width="100%" height="240">
@@ -300,7 +300,7 @@
                 </div>
             </div>
             <div class="flex-grid">
-                <div class="col wow fadeInLeft">
+                <div class="col wow fadeInUp">
                     <div class="flex-grid">
                         <div class="col">
                             <img src="images/cupping.jpg" atl="cupping" width="100%" height="240">
@@ -311,7 +311,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col wow fadeInRight">
+                <div class="col wow fadeInUp">
                     <div class="flex-grid">
                         <div class="col">
                             <img src="images/custom-bodywork.jpg" atl="custom bodywork" width="100%" height="240">
@@ -324,7 +324,7 @@
                 </div>
             </div>
             <div class="flex-grid">
-                <div class="col wow fadeInLeft">
+                <div class="col wow fadeInUp">
                     <div class="flex-grid">
                         <div class="col">
                             <img src="images/mesotherapy.jpg" atl="cupping" width="100%" height="240">
@@ -336,7 +336,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col wow fadeInRight">
+                <div class="col wow fadeInUp">
                     <div class="flex-grid">
                         <div class="col">
                         </div>
@@ -348,9 +348,9 @@
     </section>
     <!-- SECTION SERVICES MENU -->
     <section id="waitlist" class="waitlist">
-        <div class="container">
+        <div class="container wow fadeInUp">
             <img class="center" src="images/lotus-outline.png" width="80px" height="80px" alt="lotus flower">
-            <h2 class="center wow bounceIn">Waitlist Form</h2>
+            <h2 class="center">Waitlist Form</h2>
             <div class="row">
                 <!-- Begin Mailchimp Signup Form -->
                 <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
@@ -533,14 +533,14 @@
                     alt="Carolina Ruiz, LMT">
                 <h2 class="center wow fadeInUp">Carolina Ruiz, LMT</h2>
                 <div class="flex-grid">
-                    <div class="col wow fadeInLeft">
+                    <div class="col wow fadeInUp">
                         <p>Established in 2010 by Carolina Ruiz, Sacred Paradise Spa enhances wellness by providing a
                             high-quality spa experience at affordable prices. All services are performed by
                             board-licensed therapists leveraging the world renowned Sacred Paradise techniques (rated #1
                             by several Celebrities & Athletes). Sacred Paradise understands the importance of
                             maintaining consistency in the quality of the client spa experience. </p>
                     </div>
-                    <div class="col wow fadeInRight">
+                    <div class="col wow fadeInUp">
                         <p>In addition to providing on-going training and development Sacred Paradise is proud to
                             provide its team members a comfortable living wage – nearly twice the average hourly rate
                             paid at some national massage chains. We accept cash, credit/debit cards, as well as HSA &
@@ -567,7 +567,7 @@
         <!-- SECTION ETHICS -->
         <section id="ethics" class="ethics">
             <div class="container">
-                <img class="center wow bounceIn " src="images/lotus-outline.png" width="80px" height="80px"
+                <img class="center wow fadeInUp " src="images/lotus-outline.png" width="80px" height="80px"
                     alt="lotus flower">
                 <div class="flex-grid">
                     <div class="col">
@@ -623,14 +623,14 @@
         <section id="contact" class="contact">
             <div class="container">
                 <div class="flex-grid">
-                    <div class="col center wow fadeInLeft">
+                    <div class="col center wow fadeInUp">
                         <h4>SPA LOCATION 1</h4>
                         <p>7203 Germantown Avenue<br />
                             Philadelphia, PA 19119<br />
                             License: #718166</p>
 
                     </div>
-                    <div class="col center wow fadeInDown">
+                    <div class="col center wow fadeInUp">
                         <h4>SPA LOCATION 2</h4>
                         <p>7224 Germantown Avenue<br />
                             Philadelphia, PA 19119<br />
@@ -643,7 +643,7 @@
                         <p><strong>Phone:</strong> (215) 279-3432</p>
                         <p><strong>Email:</strong> carolina@sacredparadisespa.com</p>
                     </div>
-                    <div class="col center wow fadeInRight">
+                    <div class="col center wow fadeInUp">
                         <h4>Hours</h4>
                         <p>MON - FRI: 9 AM - 9 PM<br />
                             SAT: 10 AM - 7 PM<br />
