--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <!-- Title -->
     <title>Sacred Paradise Spa - Philadelphia</title>
@@ -118,7 +117,7 @@
 
     <!-- SECTION WELLNESS TEAM -->
     <section id="wellness" class="wellness">
-        <h1 class="wow fadeInUp">YOUR WELLNESS TEAM</h1>
+        <div><h1 class="wow fadeInUp">YOUR WELLNESS TEAM</h1></div>
     </section>
 
     <!-- SECTION TEAM  -->
@@ -522,7 +521,6 @@
             <a href="https://www.massagebook.com/sacred-paradise-spa-healthandwellness?src=external" target="_blank" rel="noopener"
                 class="button">Book Now 7224 G-Town</a>
         </div>
-
     </section>
 
     <!-- SECTION ABOUT -->
@@ -662,10 +660,9 @@
                     Spa | Built by designismylife
                 </p>
             </div
-
         </section>
         <div class="scrollToTop">
-            <a href="#top" role="button">SCROLL TO TOP</a>
+            <a href="#top">SCROLL TO TOP</a>
         </div>
         
         <script type="text/javascript" src="js/deznx.js"></script>
