--- a/index.html
+++ b/index.html
@@ -512,14 +512,14 @@
 
     <!-- SECTION BOOK APPOINTMENT -->
     <section id="book-now" class="book-now">
-        <div class="row center wow fadeInUp">
+        <div class="row center">
             <h1>Book Online Today</h1>
             <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa" target="_blank" rel="noopener"
-                class="button">Book Now 7203 G-Town</a>
+                class="button wow fadeInUp">Book Now 7203 G-Town</a>
             <a href="https://www.massagebook.com/therapists/SacredParadiseSpa/gift-certificates" target="_blank"
-                rel="noopener" class="button">GIFT CERTIFICATES</a>
+                rel="noopener" class="button wow fadeInUp">GIFT CERTIFICATES</a>
             <a href="https://www.massagebook.com/sacred-paradise-spa-healthandwellness?src=external" target="_blank" rel="noopener"
-                class="button">Book Now 7224 G-Town</a>
+                class="button wow fadeInUp">Book Now 7224 G-Town</a>
         </div>
     </section>
 
