--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <div class="secondary-nav">
                         <div class="row">
                             <a href="index.html" class="header-logo-2"><img src="images/sps-logo-white.png" alt="Sacred Paradise Spa
-                      Logo" height="100" width="100%"></a>
+                      Logo" height="100%" width="320px"></a>
                         </div>
                         
                      <div class="row">
