--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
         </section>
         
         <div class="scrollToTop">
-            <a href="#top">SCROLL TO TOP</a>
+            <a href="#top" class="button">SCROLL TO TOP</a>
         </div>
         
         <script type="text/javascript" src="js/deznx.js"></script>
