--- a/index.html
+++ b/index.html
@@ -121,21 +121,21 @@
     <!-- SECTION TEAM  -->
     <section id="team" class="team">
         <div class="flex-grid">
-            <div class="col">
+            <div class="col wow fadeInUp">
                 <div class="team-photo team1"></div>
                 <div class="team-content">
                     <h2>Carolina Ruiz</h2>
                     <h3>Medical Assistant for Physician, Medical Aesthetician, Medical Massage Therapist, Stretch Therapist, Body Sculpt Tech</h3>
                 </div>
             </div>
-            <div class="col">
+            <div class="col wow fadeInUp">
                 <div class="team-photo team2"></div>
                 <div class="team-content">
                     <h2>Abrina Idun</h2>
                     <h3>Master Esthecian, Reflexologist</h3>
                 </div>
             </div>
-            <div class="col">
+            <div class="col wow fadeInUp">
                 <div class="team-photo team3"></div>
                 <div class="team-content">
                     <h2>Victoria Santiago</h2>
@@ -144,14 +144,14 @@
             </div>
         </div>
         <div class="flex-grid">
-            <div class="col">
+            <div class="col wow fadeInUp">
                 <div class="team-photo team4"></div>
                 <div class="team-content">
                     <h2>Maria S.</h2>
                     <h3>Esthecian, MT</h3>
                 </div>
             </div>
-            <div class="col">
+            <div class="col wow fadeInUp">
                 <div class="team-photo team5"></div>
                 <div class="team-content">
                     <h2>Kaheem Evans</h2>
@@ -160,21 +160,21 @@
             </div>
         </div>
         <div class="flex-grid">
-            <div class="col">
+            <div class="col wow fadeInUp">
                 <div class="team-photo team7"></div>
                 <div class="team-content">
                     <h2>Flor Richiez</h2>
                     <h3>Esthetician, MT</h3>
                 </div>
             </div>
-            <div class="col">
+            <div class="col wow fadeInUp">
                 <div class="team-photo team8"></div>
                 <div class="team-content">
                     <h2>Michael M.</h2>
                     <h3>CCMA, Massage Therapist, Medical Assistant for Physician, Stretch Therapist, Body Sculpt Tech</h3>
                 </div>    
             </div>
-            <div class="col">
+            <div class="col wow fadeInUp">
                 <div class="team-photo team9"></div>
                 <div class="team-content">
                     <h2>Yvette Stevenson</h2>
@@ -187,13 +187,13 @@
     <!-- SECTION OPTIONS  -->
     <section id="options" class="options">
         <div class="container">
-            <h1 class="center">We Have Various Payment Options for Our Clients</h1>
+            <h1 class="center wow fadeInUp">We Have Various Payment Options for Our Clients</h1>
             <div class="flex-grid-thirds">
-                <div class="col wow fadeIn">
+                <div class="col wow fadeInUp">
                     <h2>With our facility being an essential business, our loyal customers payment options their for
                         fitness & alternative therapies.</h2>
                 </div>
-                <div class="col wow fadeIn">
+                <div class="col wow fadeInUp">
                     <h3>
                         Sacred Paradise Spa
                         <ul>
@@ -203,7 +203,7 @@
                         </ul>
                     </h3>
                 </div>
-                <div class="col wow fadeIn">
+                <div class="col wow fadeInUp">
                     <h3>
                         We are Currently Accepting
                         <ul>
@@ -219,7 +219,7 @@
     <!-- SECTION SERVICES MENU -->
     <section id="services-menu" class="services-menu">
         <div class="container">
-            <img class="center" src="images/lotus-outline.png" width="80px" height="80px" alt="">
+            <img class="center wow fadeInUp" src="images/lotus-outline.png" width="80px" height="80px" alt="">
             <h2 class="center wow fadeInUp">MENU OF SERVICES</h2>
             <div class="flex-grid">
                 <div class="col wow fadeInUp">
@@ -328,8 +328,8 @@
                         </div>
                         <div class="col">
                             <h4> IV Hydration, IM and Mesotherapy</h4>
-                            <p>Administered by: IV hydration, IV Push, IM TX: MSN, APRN, FNP-C</p>
-                            <p>Mesotherapy, PRP Tx, Micro needling and IM vitamin therapy by: CCMA for Physician</p>
+                            <p>Administered by: IV Hydration, IV Push, IM TX: MSN, APRN, FNP-C</p>
+                            <p>Mesotherapy, PRP TX, Micro Needling and IM Vitamin Therapy by: CCMA for Physician</p>
                         </div>
                     </div>
                 </div>
