--- a/index.html
+++ b/index.html
@@ -62,30 +62,26 @@
             </div>
         </div>
 
-        <div class="secondary-nav">
-            <div class="row">
+        <div class="mobile-menu">
                 <input type="checkbox" id="menu-toggle" class="menu-toggle">
                     <label for="menu-toggle" class="toggle-button">
                         <div class="one"></div>
                         <div class="two"></div>
                         <div class="three"></div>
                     </label>
-            </div>
                 
-            <div class="row">
                 <nav id="navbar" class="navbar">
-                    <ul class="slideout-nav" role="navigation">
-                        <li class="slideout-nav-item"><a href="index.html">HOME</a></li>
-                        <li class="slideout-nav-item"><a href="#about">ABOUT</a></li>
-                        <li class="slideout-nav-item"><a href="#ethics">ETHICS</a></li>
-                        <li class="slideout-nav-item"><a href="#wellness">WELLNESS TEAM</a></li>
-                        <li class="slideout-nav-item"><a href="#services-menu">MENU OF SERVICES</a></li>
-                        <li class="slideout-nav-item"><a href="#waitlist">WAITLIST</a></li>
-                        <li class="slideout-nav-item"><a href="#map">LOCATION</a></li>
-                        <li class="slideout-nav-item"><a href="#contact">CONTACT</a></li>
+                    <ul class="mobile-menu-list">
+                        <li><a href="index.html">HOME</a></li>
+                        <li><a href="#about">ABOUT</a></li>
+                        <li><a href="#ethics">ETHICS</a></li>
+                        <li><a href="#wellness">WELLNESS TEAM</a></li>
+                        <li><a href="#services-menu">MENU OF SERVICES</a></li>
+                        <li><a href="#waitlist">WAITLIST</a></li>
+                        <li><a href="#map">LOCATION</a></li>
+                        <li><a href="#contact">CONTACT</a></li>
                     </ul>
                 </nav>
-            </div>
         </div>
     </header>
 
