--- a/index.html
+++ b/index.html
@@ -656,9 +656,11 @@
             </div
         </section>
         
-        <div class="scrollToTop">
-            <a href="#top" class="button">SCROLL TO TOP</a>
-        </div>
+        <section id="scroll" class="scroll"> 
+            <div class="scrollToTop">
+                <a href="#top" class="button">SCROLL TO TOP</a>
+            </div>
+        </section>
         
         <script type="text/javascript" src="js/deznx.js"></script>
         <script type="text/javascript" src="js/wow.min.js"></script>
