--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
             </div>
         </section
         
-        <section id="scroll" class="scroll">
+        <section>
             <div class="scrollToTop">
                 <a href="#top" class="button">SCROLL TO TOP</a>
             </div>
