--- a/index.html
+++ b/index.html
@@ -559,10 +559,10 @@
         <!-- SECTION ETHICS -->
         <section id="ethics" class="ethics">
             <div class="container">
-                <img class="center wow fadeInUp " src="images/lotus-outline.png" width="80px" height="80px"
+                <img class="center wow fadeInUp" src="images/lotus-outline.png" width="80px" height="80px"
                     alt="lotus flower">
                 <div class="flex-grid">
-                    <div class="col">
+                    <div class="col wow fadeInUp">
                         <p><strong>Ethics</strong><br />
                             All services are for therapeutic purposes only. Please do not contact Sacred Paradise Spa if
                             you are seeking any kind of illegal/inappropriate sexual or erotic/sensual services. Sexual
@@ -586,7 +586,7 @@
                         <p>Cash gratuity, is welcomed and appreciated by all of our wellness practitioners. You can put
                             tips in the therapist envelope(s) located on the front desk.</p>
                     </div>
-                    <div class="col">
+                    <div class="col wow fadeInUp">
                         <p><strong>Cancellation</strong><br />
                             We require <strong>24 hours notice</strong> to cancel, or we will have to charge you the
                             full price of your services. <strong>We can not accept same day cancellations.</strong> All
