--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
                     </div>
                 </div>
             </div>
-        </section
+        </section>
         
         <section>
             <div class="scrollToTop">
