--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
     <section id="waitlist" class="waitlist">
         <div class="container wow fadeInUp">
             <img class="center" src="images/lotus-outline.png" width="80px" height="80px" alt="lotus flower">
-            <h2 class="center">Waitlist Form</h2>
+            <h2>Waitlist Form</h2>
             <div class="row">
                 <!-- Begin Mailchimp Signup Form -->
                 <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
@@ -563,8 +563,8 @@
                     alt="lotus flower">
                 <div class="flex-grid">
                     <div class="col wow fadeInUp">
-                        <p><strong>Ethics</strong><br />
-                            All services are for therapeutic purposes only. Please do not contact Sacred Paradise Spa if
+                        <h2>Ethics</h2>
+                        <p>All services are for therapeutic purposes only. Please do not contact Sacred Paradise Spa if
                             you are seeking any kind of illegal/inappropriate sexual or erotic/sensual services. Sexual
                             advances will not be tolerated at our spa. Any inappropriate behaviors will result in the
                             immediate termination of the services. Clients and staff are not allowed to exchange
